# shortly

./: .gitignore  Dockerfile  README.md  pyproject.toml
apps/accounts/: views.py
apps/shortener/: models.py  urls.py  views.py
apps/shortener/migrations/: 0001_initial.py
core/: settings.py  urls.py
templates/: index.html
templates/includes/: header.html  navbar.html
templates/layouts/: base.html
templates/registration/: login.html  signup-card.html  signup.html
templates/shortener/: list.html
