[tool.poetry]
name = "shortly"
version = "0.1.0"
description = ""
authors = ["Matt O'Donnell <matt@absolutod.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"
django-environ = "^0.9.0"
python-dotenv = "^0.21.0"
toml = "^0.10.2"
whitenoise = "^6.3.0"
autopep8 = "^2.0.1"
pycodestyle = "^2.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
